Avoid linebreaks in inline code

--- a/assets/scss/_text.scss
+++ b/assets/scss/_text.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@400;700&display=swap');
 
 body {
-  font-family: $text-font-family;
+  // font-family: $text-font-family;
   font-weight: 400;
 }
 
@@ -26,13 +26,29 @@ h4 code {
   font-size: inherit;
 }
 
+// code
+
+code {
+  hyphens: none;
+}
+
 @mixin inline-code-dark {
   code {
     background-color: $bg-color-dark;
   }
 }
 
-/* Littlefoot */
+// video element
+
+.content video {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+}
+
+// littlefoot.js
+// Override justification and make it readable in dark mode
 div.littlefoot-footnote__wrapper > div > p {
   text-align: left;
   color: $fg-color;
